Fix width of main menu on mobile

--- a/app/assets/stylesheets/dropdowns.scss
+++ b/app/assets/stylesheets/dropdowns.scss
@@ -1,7 +1,8 @@
 @import "colors.scss";
 
 .dropdown-menu.account-dropdown-menu,
-.dropdown-menu.matches-dropdown-menu {
+.dropdown-menu.matches-dropdown-menu,
+.dropdown-menu.main-dropdown-menu {
   width: 13em;
 }
 
